Fix z-index

--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -19,8 +19,8 @@
     --sidebar-width-collapsed: 80px;
 
     // z - INDEXES
-    --modal-z-index: 10;
-    --overlay-z-index: -1;
+    --modal-z-index: 10000;
+    --overlay-z-index: 100;
     --sidebar-z-index: 10;
 
     // COLORS
