--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -9,15 +9,6 @@
     align-items: center;
 }
 
-.overlay {
-    width: 100%;
-    height: 100%;
-    background: var(--overlay-bg-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .content {
     padding: 20px;
     border-radius: 12px;
@@ -26,6 +17,8 @@
     transform: scale(0.5);
     max-width: 60%;
     opacity: 1;
+    position: relative;
+    z-index: calc(var(--overlay-z-index) + 1);
 }
 
 .opened {
@@ -35,6 +28,7 @@
 }
 
 .contentOpened {
+    z-index: var(--modal-z-index);
     transform: scale(1);
 }
 
